fixed spacing issues for the review divs on OverallCourseReviews and AdminPage

--- a/Frontend/rate_my_course/src/styles/Reviews.css
+++ b/Frontend/rate_my_course/src/styles/Reviews.css
@@ -19,6 +19,16 @@
   margin-top: 2%;
 }
 
+.form-container-2 {
+  border: 5px solid #BB1C1C;
+  background-color: white; 
+  min-height: 600px;
+  flex-shrink: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .class-header {
   width: 80%;
   margin-left: auto;
@@ -43,5 +53,4 @@
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  margin-bottom: 5%;
 }
